Update changes in controller and ApplicationDb

--- a/LoanProject/Views/Loan/Index.cshtml
+++ b/LoanProject/Views/Loan/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<LoanModel>
 
+<div class="container">
+    <div class="d-flex justify-content-sm-between align-items-center mb-5">
+        <hi>Loans</hi>
+        <a class="btn btn-success mx-2" asp-controller="Loan" asp-action="Register">Register new loan</a>
+    </div>
 
 <table class="table table-dark table-striped">
     <thead>
@@ -8,6 +13,7 @@
             <th scope="col">Supplier</th>
             <th scope="col">Book</th>
             <th scope="col">Update Date</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -21,8 +27,13 @@
                     <td>@loan.Supplier</td>
                     <td>@loan.BorrowedBook</td>
                     <td>@loan.LastBorrowDate</td>
+                    <td>
+                            <a asp-controller="Loan" asp-action="Edit" asp-route-id="@loan.Id" class ="btn btn-warning mx-2">Editar</a>
+                            <a asp-controller="Loan" asp-action="Delete" asp-route-id="@loan.Id" class="btn btn-danger mx-2">Excluir</a>
+                    </td>
                 </tr>
             }
         }
     </tbody>
 </table>
+</div>
