--- a/LoanProject/Views/Loan/Delete.cshtml
+++ b/LoanProject/Views/Loan/Delete.cshtml
@@ -1,43 +1,42 @@
 ﻿@model LoanModel
-
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
-    ViewData["title"] = "Edit Loan";
+    ViewData["title"] = "Delete Loan";
 }
 
 <div class="container bg-dark p-5 rounde-5">
     <div class="mb-5 text-center">
-        <h1 class="text-light">Edit Loan</h1>
+        <h1 class="text-light">Delete Loan</h1>
     </div>
 
-    <form method="post" asp-controller="Loan" asp-action="Edit">
+    <form method="post" asp-controller="Loan" asp-action="Delete">
 
-        <input type="hidden" asp-for=Id/>
+        <input type="hidden" asp-for=Id />
+
+        <h2 class="text-light" >Are you sure you want delete?dssssssssssssssssssssssssssssssssssss</h2>
 
         <div class="mb-3">
             <label for="Receiver" class="form-label text-light">Receiver</label>
-            <input type="text" class="form-control" asp-for="Receiver" id="Receiver" placeholder="Who is receiving the book?">
+            <input type="text" class="form-control" asp-for="Receiver" id="Receiver" placeholder="Who is receiving the book?" disabled>
             <span class="text-danger" asp-validation-for="Receiver"></span>
         </div>
 
         <div class="mb-3">
             <label for="Supplier" class="form-label text-light">Supplier</label>
-            <input type="text" class="form-control" asp-for="Supplier" id="Supplier" placeholder="Who is lending the book?">
+            <input type="text" class="form-control" asp-for="Supplier" id="Supplier" placeholder="Who is lending the book?" disabled>
             <span class="text-danger" asp-validation-for="Supplier"></span>
         </div>
 
         <div class="mb-3">
             <label type="Book" class="form-label text-light" id="Book">Book:</label>
-            <input type="text" class="form-control" asp-for="BorrowedBook" id="Book" placeholder="Which book is been lending?">
+            <input type="text" class="form-control" asp-for="BorrowedBook" id="Book" placeholder="Which book is been lending?" disabled>
             <span class="text-danger" asp-validation-for="BorrowedBook"></span>
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success w-50">Edit</button>
+            <button type="submit" class="btn btn-success w-50">Delete</button>
             <a class="btn btn-primary w-50" asp-controller="Loan" asp-action="Index">Back</a>
         </div>
 
     </form>
 </div>
+
