--- a/LoanProject/Views/Loan/Delete.cshtml
+++ b/LoanProject/Views/Loan/Delete.cshtml
@@ -12,7 +12,7 @@
 
         <input type="hidden" asp-for=Id />
 
-        <h2 class="text-light" >Are you sure you want delete?dssssssssssssssssssssssssssssssssssss</h2>
+        <h2 class="text-light" >Are you sure you want delete?</h2>
 
         <div class="mb-3">
             <label for="Receiver" class="form-label text-light">Receiver</label>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success w-50">Delete</button>
+            <button type="submit" class="btn btn-danger w-50">Delete</button>
             <a class="btn btn-primary w-50" asp-controller="Loan" asp-action="Index">Back</a>
         </div>
 
