--- a/LoanProject/Views/Home/Index.cshtml
+++ b/LoanProject/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Online Loan</h1>
+    <p>Open a book and let yourself go. A new world you will find so.</p>
+    <div>
+       <img src="img/book.png"/>
+    </div>
 </div>
