--- a/LoanProject/Views/Loan/Index.cshtml
+++ b/LoanProject/Views/Loan/Index.cshtml
@@ -3,10 +3,24 @@
 <div class="container">
     <div class="d-flex justify-content-sm-between align-items-center mb-5">
         <hi>Loans</hi>
-        <a class="btn btn-success mx-2" asp-controller="Loan" asp-action="Register">Register new loan</a>
+        <a class="btn btn-success mx-2" asp-controller="Loan" asp-action="Register"><i class="bi bi-file-earmark-plus mx-2"></i>Register new loan</a>
     </div>
 
-<table class="table table-dark table-striped">
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success text-light" role="alert" >
+            @TempData["SuccessMessage"]
+        </div>
+    }
+
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger text-light" role="alert">
+            @TempData["ErrorMessage"]
+        </div>
+    }
+
+<table id="loans" class="table table-light table-striped mt-5">
     <thead>
         <tr>
             <th scope="col">Receiver</th>
@@ -28,8 +42,8 @@
                     <td>@loan.BorrowedBook</td>
                     <td>@loan.LastBorrowDate</td>
                     <td>
-                            <a asp-controller="Loan" asp-action="Edit" asp-route-id="@loan.Id" class ="btn btn-warning mx-2">Editar</a>
-                            <a asp-controller="Loan" asp-action="Delete" asp-route-id="@loan.Id" class="btn btn-danger mx-2">Excluir</a>
+                            <a asp-controller="Loan" asp-action="Edit" asp-route-id="@loan.Id" class="btn btn-warning mx-2"><i class="bi bi-pencil-square mx-2"></i>Edit</a>
+                            <a asp-controller="Loan" asp-action="Delete" asp-route-id="@loan.Id" class="btn btn-danger mx-2"><i class="bi bi-trash3-fill mx-2"></i>Delete</a>
                     </td>
                 </tr>
             }
